# pipes2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  macros.hint  makeSingleHeader.cmake
pch/: CMakeLists.txt  pch.hpp
src/: CMakeLists.txt
src/pipes/: api.hpp  defaults.hpp  makePipes.hpp  makeSources.hpp  operators.hpp  pipes.hpp  useAsSink.hpp
src/pipes/detail/: AddAll.hpp  AddEach.hpp  Adjacent.hpp  Combinations.hpp  Discard.hpp  DropTake.hpp  Filter.hpp  Flatten.hpp  ForEach.hpp  Fork.hpp  FromStream.hpp  GenericSink.hpp  GenericSource.hpp  IteratorSink.hpp  MixIn.hpp  OutputIterator.hpp  Partition.hpp  PushBack.hpp  Reduce_each.hpp  RemoveElement.hpp  Stride.hpp  Switch.hpp  Tee.hpp  ToStream.hpp  Transform.hpp  TupleFlatten.hpp  rangeSinks.hpp
src/pipes/detail/GenericImplementation/: BuildingBlocks.hpp  ConnectedSinkSection.hpp  defaulting.hpp  impl.hpp
src/pipes/detail/Utility/: FWD.hpp  HOF.hpp  ViewWrapper.hpp  functional.hpp
test/: CMakeLists.txt  Discard.hpp  FWD.hpp  Filter.hpp  ForEach.hpp  Node.hpp  PushBack.hpp  RawNodes.hpp  Transform.hpp  Zip.hpp  add_all.cpp  add_each.cpp  adjacent.cpp  cartesian_product.cpp  chained_operations.cpp  combinations.cpp  default_sinks.cpp  discard.cpp  flatten.cpp  forUI.hpp  for_each.cpp  fork.cpp  from_stream.cpp  generic_sink.cpp  generic_source.cpp  impl.hpp  insert_or_assign.cpp  interleave.cpp  intersperse.cpp  operators.hpp  otherOperators.cpp  output_iterator.cpp  partition.cpp  pch.hpp  pipes.hpp  push_back.cpp  push_front.cpp  reduce.cpp  remove_element.cpp  reverse.hpp  (+13 more)
test/compile_time_tests/: CMakeLists.txt  transform_does_not_compile_with_invalid_input_parameter.cpp  transform_does_not_compile_with_invalid_output_parameter.cpp
test/pipes/: api.hpp  apihelpers.hpp  defaults.hpp  forUI.hpp  makePipes.hpp  makeSinks.hpp  makeSources.hpp  operators.hpp  pipes.hpp
test/pipes/GenericImplementation/: ConnectedSinkSection.hpp  Node.hpp  RawNodes.hpp  Sink.hpp  SinkPiece.hpp  SinkSection.hpp  Source.hpp  impl.hpp
test/pipes/SpecificPipes/: Discard.hpp  Drop.hpp  Filter.hpp  ForEach.hpp  Fork.hpp  PushBack.hpp  Transform.hpp  Zip.hpp  helpers.hpp
test/pipes/Utility/: FWD.hpp  RETURN.hpp  functional.hpp  reverse.hpp
test/pipes/detail/: Drop.hpp  Filter.hpp  Flatten.hpp  ForEach.hpp  Fork.hpp  PushBack.hpp  Reduce_each.hpp  Switch.hpp  Tee.hpp  Transform.hpp  Unzip.hpp
test/pipes/detail/GenericImplementation/: BuildingBlocks.hpp  ConnectedSinkSection.hpp
test/pipes/detail/Utility/: functional.hpp  tuples.hpp
test/single_header/: pipes.hpp
test/support/: sink.hpp  source.hpp  test_streaming.hpp
test/testrunner/: CMakeLists.txt
test/tests/: CMakeLists.txt  add_all.cpp  add_each.cpp  adjacent.cpp  cartesian_product.cpp  chained_operations.cpp  chunk.cpp  combinations.cpp  default_sinks.cpp  discard.cpp  drop.cpp  filter.cpp  flatten.cpp  for_each.cpp  fork.cpp  from_stream.cpp  generic_sink.cpp  generic_source.cpp  insert.cpp  insert_or_assign.cpp  interleave.cpp  intersperse.cpp  map_aggregator.cpp  partition.cpp  push_back.cpp  push_front.cpp  reduce.cpp  reduce_each.cpp  remove_element.cpp  set_aggregator.cpp  stride.cpp  switch.cpp  take.cpp  tee.cpp  test.cpp  to_iterator.cpp  to_ostream.cpp  to_stream.cpp  transform.cpp  unzip.cpp  (+1 more)
test/tests/support/: sink.hpp  source.hpp
